--- a/app/src/main/res/layout/album_preview.xml
+++ b/app/src/main/res/layout/album_preview.xml
@@ -21,20 +21,20 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="horizontal"
-            android:weightSum="6"
+            android:weightSum="10"
             >
 
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:orientation="horizontal"
-                android:layout_weight="5"
+                android:layout_weight="8"
                 >
 
                 <android.support.v7.widget.AppCompatImageView
                     android:id="@+id/cover"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
                     android:layout_margin="10dp"
                     android:layout_gravity="center"
                     />
@@ -59,7 +59,7 @@
                 android:layout_height="match_parent"
                 android:gravity="right|center"
                 android:orientation="vertical"
-                android:layout_weight="1"
+                android:layout_weight="2"
                 >
 
                 <android.support.v7.widget.AppCompatTextView
@@ -67,7 +67,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
-                    android:text="2018"
+                    android:text="Year: 2018"
                     android:textColor="@android:color/black"
                     android:textSize="12dp" />
 
