--- a/app/src/main/res/layout/track_info.xml
+++ b/app/src/main/res/layout/track_info.xml
@@ -18,31 +18,23 @@
         app:contentPadding="0dp">
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:layout_margin="5dp"
+            android:weightSum="12"
             >
-
-            <!--<android.support.v7.widget.AppCompatImageView
-                android:id="@+id/cover"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_margin="10dp"
-                />-->
-
-
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-
-                android:orientation="vertical">
-
+                android:orientation="vertical"
+                android:layout_weight="11"
+                android:layout_margin="5dp"
+                >
                 <android.support.v7.widget.AppCompatTextView
                     android:id="@+id/track_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_margin="2dp"
                     android:text="Track Name"
                     android:textColor="@android:color/black"
                     android:textSize="15dp" />
@@ -51,39 +43,25 @@
                     android:id="@+id/track_artist"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_margin="5dp"
                     android:text="Artist"
-                    android:textColor="@android:color/black"
                     android:textSize="10dp" />
 
             </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-
-                >
 
                 <android.support.v7.widget.AppCompatTextView
                     android:id="@+id/track_duration"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
                     android:text="5:24"
-                    android:textColor="@android:color/black"
-                    android:textSize="10dp" />
-            </LinearLayout>
+                    android:textSize="10dp"
+                    android:layout_weight="1"
+                    android:layout_gravity="center"
+                    android:gravity="right"
+                    />
 
         </LinearLayout>
 
     </android.support.v7.widget.CardView>
 
 </FrameLayout>
-
-    <!--
-    <?xml version="1.0" encoding="utf-8"?>
-    <android.support.constraint.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-    </android.support.constraint.ConstraintLayout>-->
