added progressbar ok app

--- a/app/src/main/res/layout/activity_album_info.xml
+++ b/app/src/main/res/layout/activity_album_info.xml
@@ -3,6 +3,9 @@
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -34,7 +37,7 @@
                     android:id="@+id/album_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Album Name"
+
                     android:textColor="@android:color/black"
                     android:textSize="16dp"
                     />
@@ -42,7 +45,7 @@
                     android:id="@+id/album_artist"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Artist"
+
                     />
                 <!--<android.support.v7.widget.AppCompatTextView
                     android:id="@+id/album_tracks_count"
@@ -54,7 +57,7 @@
                     android:id="@+id/album_genre"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Rock"
+
                     />
                 <!--<android.support.v7.widget.AppCompatTextView
                     android:id="@+id/album_release_date"
@@ -64,6 +67,8 @@
                     />-->
             </LinearLayout>
         </LinearLayout>
+
+
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/tracks_recycler"
@@ -75,4 +80,20 @@
 
     </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            >
+            <ProgressBar
+                android:id="@+id/progress_bar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:visibility="visible"
+                />
+        </LinearLayout>
+
+
+    </RelativeLayout>
 </android.support.constraint.ConstraintLayout>
