--- a/app/src/main/res/layout/activity_album_info.xml
+++ b/app/src/main/res/layout/activity_album_info.xml
@@ -47,24 +47,12 @@
                     android:layout_height="wrap_content"
 
                     />
-                <!--<android.support.v7.widget.AppCompatTextView
-                    android:id="@+id/album_tracks_count"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="tracks: 15"
-                    />-->
                 <android.support.v7.widget.AppCompatTextView
                     android:id="@+id/album_genre"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
 
                     />
-                <!--<android.support.v7.widget.AppCompatTextView
-                    android:id="@+id/album_release_date"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="05/10/2018"
-                    />-->
             </LinearLayout>
         </LinearLayout>
 
@@ -79,21 +67,12 @@
         </android.support.v7.widget.RecyclerView>
 
     </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            >
             <ProgressBar
                 android:id="@+id/progress_bar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
+                android:layout_centerInParent="true"
                 android:visibility="visible"
                 />
-        </LinearLayout>
-
-
     </RelativeLayout>
 </android.support.constraint.ConstraintLayout>
