added not found

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,6 +25,16 @@
             android:layout_centerInParent="true"
             android:visibility="invisible"
             />
+        <android.support.v7.widget.AppCompatTextView
+            android:id="@+id/not_found"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Sorry, nothing found! =("
+            android:textSize="30dp"
+            android:textStyle="bold"
+            android:layout_centerHorizontal="true"
+            android:visibility="invisible"
+            />
 
     </RelativeLayout>
 
