--- a/app/src/main/res/layout/album_preview.xml
+++ b/app/src/main/res/layout/album_preview.xml
@@ -2,7 +2,8 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    >
 
     <android.support.v7.widget.CardView
         android:id="@+id/card_view"
@@ -15,7 +16,9 @@
         app:cardCornerRadius="2dp"
         app:cardElevation="2dp"
         app:cardPreventCornerOverlap="false"
-        app:contentPadding="0dp">
+        app:contentPadding="0dp"
+        app:cardBackgroundColor="#70FFFFFF"
+        >
 
         <LinearLayout
             android:layout_width="match_parent"
