--- a/app/src/main/res/drawable/ic_launcher_background.xml
+++ b/app/src/main/res/drawable/ic_launcher_background.xml
@@ -4,7 +4,7 @@
     android:height="108dp"
     android:viewportHeight="108"
     android:viewportWidth="108">
-    <path
+    <!--<path
         android:fillColor="#26A69A"
         android:pathData="M0,0h108v108h-108z" />
     <path
@@ -166,5 +166,5 @@
         android:fillColor="#00000000"
         android:pathData="M79,19L79,89"
         android:strokeColor="#33FFFFFF"
-        android:strokeWidth="0.8" />
+        android:strokeWidth="0.8" />-->
 </vector>
