--- a/app/src/main/res/layout-land/activity_album_info.xml
+++ b/app/src/main/res/layout-land/activity_album_info.xml
@@ -15,22 +15,22 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
+        android:orientation="horizontal"
         android:weightSum="6"
         >
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
             android:layout_margin="5dp"
             android:layout_weight="1"
             android:background="#50FFFFFF"
-            android:orientation="horizontal">
+            android:orientation="vertical">
 
             <android.support.v7.widget.AppCompatImageView
                 android:id="@+id/album_cover"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:src="@drawable/itunes"
                 android:minHeight="50dp"
                 android:minWidth="50dp"
@@ -40,7 +40,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_margin="5dp"
-                android:gravity="center|left"
+                android:gravity="center|top"
                 android:orientation="vertical">
 
                 <android.support.v7.widget.AppCompatTextView
@@ -49,20 +49,23 @@
                     android:layout_height="wrap_content"
                     android:text="Album"
                     android:textColor="@android:color/black"
-                    android:textSize="16dp" />
+                    android:textSize="12dp" />
 
                 <android.support.v7.widget.AppCompatTextView
                     android:id="@+id/album_artist"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Artist"
+                    android:textSize="12dp"
                     />
 
                 <android.support.v7.widget.AppCompatTextView
                     android:id="@+id/album_genre"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="left"
                     android:text="genre"
+                    android:textSize="12dp"
                     />
             </LinearLayout>
         </LinearLayout>
@@ -71,8 +74,8 @@
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/tracks_recycler"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
             android:layout_weight="5"
             >
         </android.support.v7.widget.RecyclerView>
