--- a/app/src/main/res/layout-land/activity_album_info.xml
+++ b/app/src/main/res/layout-land/activity_album_info.xml
@@ -24,7 +24,7 @@
             android:layout_height="match_parent"
             android:layout_margin="5dp"
             android:layout_weight="1"
-            android:background="#50FFFFFF"
+            android:background="@color/myTransparent"
             android:orientation="vertical">
 
             <android.support.v7.widget.AppCompatImageView
@@ -47,25 +47,25 @@
                     android:id="@+id/album_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Album"
+                    android:text="@string/sample_album"
                     android:textColor="@android:color/black"
-                    android:textSize="12dp" />
+                    android:textSize="12sp" />
 
                 <android.support.v7.widget.AppCompatTextView
                     android:id="@+id/album_artist"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Artist"
-                    android:textSize="12dp"
+                    android:text="@string/sample_artist"
+                    android:textSize="12sp"
                     />
 
                 <android.support.v7.widget.AppCompatTextView
                     android:id="@+id/album_genre"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="left"
-                    android:text="genre"
-                    android:textSize="12dp"
+                    android:layout_gravity="start"
+                    android:text="@string/sample_genre"
+                    android:textSize="12sp"
                     />
             </LinearLayout>
         </LinearLayout>
