--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -37,8 +36,8 @@
             android:id="@+id/not_found"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Sorry, nothing found! =("
-            android:textSize="30dp"
+            android:text="@string/nothing_found"
+            android:textSize="30sp"
             android:textStyle="bold"
             android:layout_centerHorizontal="true"
             android:visibility="invisible"
